--- a/templates/products/products-alter-form.html
+++ b/templates/products/products-alter-form.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 
-    <body>
+<body>
 
     <section class="container-fluid box-shadow pb-5" style="border-top: 1px solid #ccc">
         <div class="container mt-3">
@@ -16,42 +16,42 @@
             </div>
 
             <div class="row p-lg-5 py-4 px-1 rounded mb-5 texto-campo" style="border: 1px solid #ccc">
-   <div>
-        {% for message in messages %}
-               <div class="alert alert-success alert-dismissible fade show" role="alert">
-                   {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+
+                <div>
+                    {% for message in messages %}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+                    {% endfor %}
                 </div>
 
-               {% endfor %}
-    </div>
-    <form method="POST" action="" enctype="multipart/form-data" class="col-lg-9">
-        {% csrf_token %}
-        {{ form|bootstrap }}
+                <form method="POST" enctype="multipart/form-data" class="col-lg-9">
+                    {% csrf_token %}
+                    {{ form|bootstrap }}
+                    <div>
+                        <select required class="custom-select mt-2 mb-4 col-4" name="estado" id="estado"></select>
+                    </div>
+                    <div>
+                        <select required class="custom-select col-4" name="cidade" id="cidade"></select>
+                    </div>
+            </div>
 
-        <select required class="custom-select mt-2 mb-4" name="estado" id="estado"></select>
-        <select required class="custom-select" name="cidade" id="cidade"></select>
 
-    <div class="row mt-5">
-                <div class="col-lg-6">
-                    <span>Ao publicar você concorda e aceita nossos <a href="#">Termos de Uso e
-                            Privacidade</a></span>
-                </div>
-                <div class="col-3">
-                </div>
-                <div class="col-lg-3 text-center">
+            <div class="row mt-5 justify-content-end">
+                <div class="col-lg-3">
                     <button type="submit"
-                        class="btn btn-primary px-5 btn-block mt-3 mt-lg-0 btn-lg botao-redondo">Alterar</button>
+                        class="btn btn-primary px-5 btn-block mt-3 mt-lg-0 btn-lg botao-redondo">Salvar
+                        Alterações</button>
                 </div>
                 </form>
             </div>
 
         </div>
     </section>
-
-
 
     <script type="text/javascript">
         document.getElementById("id_nome").placeholder = 'Título*';
@@ -64,15 +64,17 @@
         /* Diminuir espaçamento entre campos */
         document.getElementById("id_nome").style.marginBottom = "-8px";
         document.getElementById("id_descricao").style.marginBottom = "-20px";
+        document.getElementById("id_descricao").style.height = "130px";
         document.getElementById("id_categoria").style.marginBottom = "-20px";
         document.getElementById("id_preco").style.marginBottom = "-20px";
         document.getElementById("id_condicoesUso").style.marginBottom = "-20px";
+        document.getElementById("id_condicoesUso").style.height = "130px";
     </script>
 
-   <script language="JavaScript" type="text/javascript" charset="utf-8">
-      new dgCidadesEstados({
-        cidade: document.getElementById('cidade'),
-        estado: document.getElementById('estado')
-      }, '{{estado}}', '{{cidade}}')
+    <script language="JavaScript" type="text/javascript" charset="utf-8">
+        new dgCidadesEstados({
+            cidade: document.getElementById('cidade'),
+            estado: document.getElementById('estado')
+        }, '{{estado}}', '{{cidade}}')
     </script>
-{% endblock %}
+    {% endblock %}
