Arrumando "anunciar" do footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,7 @@
         <div class="col-md-4 col-7">
           <h6>ACESSO RÁPIDO</h6>
           <ul class="list-unstyled">
-            
+            <li><a href="{% url 'create_products' %}">→ Anunciar</a></li>
             <li><a href="{% url 'list_products' user.id %}">→ Meus Anúncios</a></li>
             <li><a href="{% url 'perfil' user.id %}">→ Meu Perfil</a></li>
           </ul>
