--- a/templates/base_rodape_fixo.html
+++ b/templates/base_rodape_fixo.html
@@ -38,17 +38,6 @@
               <img src="{% static 'images/icone-meus-anuncios.png' %}" alt="meus anuncios">
               Meus Anúncios</a>
           </li>
-          <li class="nav-item">
-            <a href="{% url 'show_notifications' %}" class="navbar-item">
-              <i class="material-icons"></i>
-              {% if count_notifications %}
-              <i class="far fa-bell" style="color:red;"></i>
-              {% else %}
-              <i class="far fa-bell"></i>
-              <span class="badge">{{ count_notifications }}</span>
-              {% endif %}
-            </a>
-          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
               href="perfil_usuario.html">
@@ -56,20 +45,31 @@
               Perfil</a>
             <div class="dropdown-menu cor-texto-dropdown" aria-labelledby="navbarDropdown">
               <div class="arredondar-linha">
-                <a class="dropdown-item" href="{% url 'perfil' user.id %}">Meu Perfil
+                <a href="{% url 'show_notifications' %}" class="dropdown-item">
+                  <i class="material-icons">Notificações</i>
+                  {% if count_notifications %}
+                  <i class="far fa-bell" style="color:red;"></i>
+                  {% else %}
+                  <i class="far fa-bell ml-1"></i>
+                  <span class="badge">{{ count_notifications }}</span>
+                  {% endif %}
+                </a>
+              </div>
+              <div class="arredondar-linha">
+                <a class="dropdown-item" href="{% url 'perfil' user.id %}"><i>Meu Perfil</i> 
                   <img class="ml-1" src="{% static 'images/icone-perfil-dropdown.ico' %}" alt="icone perfil"></a>
               </div>
               <div class="arredondar-linha">
                 <a class="dropdown-item" href="{% url 'meusChats' %}">
-                  Chat
+                  <i>Chat</i> 
                   <img class="ml-2" src="{% static 'images/icone-chat.png' %}" alt="icone chat"></a>
               </div>
               <div class="arredondar-linha">
                 <a class="dropdown-item" href="#">
-                  Ajuda
+                  <i>Ajuda</i> 
                   <img src="{% static 'images/icone-ajuda-2.ico' %}" class="ml-1" alt="icone ajuda"></a>
               </div>
-              <a class="dropdown-item" href="{% url 'logout' %}">Sair
+              <a class="dropdown-item" href="{% url 'logout' %}"><i>Sair</i>
                 <img src="{% static 'images/icone-sair.png' %}" alt="icone sair"></a>
             </div>
           <li class="nav-item aumentar-tamanho-mouse">
@@ -85,6 +85,7 @@
           <li class="nav-item aumentar-tamanho-mouse">
             <a id="anunciar" class="btn text-white ml-md-2 px-3 botao-redondo" style="background-color: orange;"
               href="{% url 'login' %}">Anunciar</a>
+          </li>
           </li>
           {% endif %}
         </ul>
@@ -109,16 +110,16 @@
         <div class="col-md-4 col-7">
           <h6>ACESSO RÁPIDO</h6>
           <ul class="list-unstyled">
-            <li><a href="{% url 'create_products' user.id %}">→ Anunciar</a></li>
+            <li><a href="{% url 'create_products' %}">→ Anunciar</a></li>
             <li><a href="{% url 'list_products' user.id %}">→ Meus Anúncios</a></li>
             <li><a href="{% url 'perfil' user.id %}">→ Meu Perfil</a></li>
           </ul>
         </div>
 
         <div class="d-md-none col-5">
-          
+
         </div>
-        
+
         <div class="col-md-4 col-7 mt-3 mb-5 mt-md-0 mb-md-0">
           <h6>LINKS ÚTEIS</h6>
           <ul class="list-unstyled">
@@ -157,7 +158,7 @@
       </div>
 
       <div class="row justify-content-between mt-1 mr-1">
-      
+
         <div class="extra ml-3">
           <a href="">Termos e condições de uso</a>
         </div>
