--- a/templates/home/termosdeuso.html
+++ b/templates/home/termosdeuso.html
@@ -4,10 +4,306 @@
 
 {% block main %}
 
-<h1> Termos de uso</h1>
+<div class="container">
+  <div class="text-center">
+    <h1 class="display-4 text-primary mb-2">Termos de Uso</h1>
+  </div>
+  <div class="row box-shadow px-3 py-5" style="color: rgb(74, 74, 74)">
 
-<div>
-  
+    <p>
+      Se você está aqui é porque você quer saber mais sobre as obrigações e direitos que lhe correspondem como um
+      usuário deste site, Alugo: https://www.alugo.com.br. Nosso dever é informar e o seu é estar devidamente
+      informado.
+    </p>
+    <p>
+      Esta Política de Privacidade é para informá-lo com total transparência sobre a finalidade deste site e tudo o
+      que
+      afeta os dados que nos forneça, bem como as obrigações e direitos que lhe correspondem.
+    </p>
+    <p>
+      Para começar, você deve saber que este site se adapta a normativa vigente em matéria de proteção de dados, o
+      que
+      afeta os dados pessoais que nos forneça com o seu consentimento expresso e os cookies que utilizamos para que
+      este
+      site funcione corretamente e possa desenvolver sua atividade.
+    </p>
+    <p>
+      Especificamente, este site se ajusta ao cumprimento das seguintes normas:
+    </p>
+    <p>
+      Lei geral de proteção de dados pessoais (projeto de lei aprovado recentemente, baseado na lei Europeia)
+      Lei Brasileira n.º 12.965, de 2014
+      RGPD (Regulamento (UE) 2016/679 do Parlamento Europeu e do Conselho, de 27 de abril de 2016, relativo à
+      proteção
+      das pessoas físicas) que é a nova legislação da União Europeia que unifica a regulamentação do tratamento dos
+      dados pessoais nos diferentes países da UE.
+      DADOS DE IDENTIFICAÇÃO
+      A seguir estão os dados do responsável titular de este site:
+    </p>
+    <p>
+      Nome/Razão Social: George Santos
+
+      CPF/CNPJ: 09.701.888/0001-64
+
+      Endereço:
+
+      Atividade do site: aluguel de bens
+
+      E-mail: contato@alugo.com.br
+    </p>
+    <p>
+      Os dados pessoais que nos fornecer, sempre com o seu consentimento expresso, serão guardados e tratados para
+      os
+      fins previstos a seguir descritos nesta Política de Privacidade, até o momento em que nos solicite a remoção.
+    </p>
+    <p>
+      Informamos que esta Política de Privacidade pode ser alterada a qualquer momento, com a finalidade de
+      adaptá-la
+      a
+      novidades legislativas ou mudanças em nossas atividades, sendo vigente a cada momento a que está publicada no
+      site. Em caso de alteração você será notificado antes da sua aplicação.
+    </p>
+    <p>
+      CONDIÇÕES DE USO
+      Você deve saber, para sua tranquilidade, que sempre será solicitado o seu consentimento expresso para obter
+      seus
+      dados com a respectiva finalidade especificada em cada caso, o que implica que, em caso de dar esse
+      consentimento,
+      você leu e concorda com esta Política de Privacidade.
+    </p>
+    <p>
+      No momento em que acesse e utiliza esta página web, está assumindo a sua condição de usuário com seus
+      correspondentes direitos e obrigações.
+    </p>
+    <p>
+      Se você é maior de 13 anos, poderá registar-se como utilizador deste site sem o prévio consentimento de seus
+      pais
+      ou tutores.
+      Se você é menor de 13 anos, necessitará o consentimento de seus pais ou tutores para o tratamento dos seus
+      dados
+      pessoais.
+      Nunca solicito informações pessoais, a menos que realmente seja necessário para prestar os serviços que
+      ofereço
+      nesse website.
+      Nunca compartilho informações pessoais dos meus usuários com ninguém, exceto para cumprir com a lei ou em caso
+      que
+      tenha a sua autorização expressa.
+      Nunca utilizo os seus dados pessoais com uma finalidade diferente da expressa nesta política de privacidade.
+    </p>
+    <p>
+      REGISTRO E FINALIDADE DOS SEUS DADOS
+    </p>
+    <p>
+      Em função do formulário ou seção que acesse será solicitado exclusivamente os dados necessários com as
+      finalidades
+      descritas a seguir. Em todo momento, você deve dar o seu consentimento expresso, quando lhe solicitamos
+      informações pessoais para as seguintes finalidades:
+    </p>
+    <p>
+      As finalidades concretas que particularmente são indicadas em cada uma das páginas ou seções onde aparece o
+      formulário de registro ou contato eletrônico.
+      Com carácter geral, para atender os seus pedidos, comentários, perguntas ou qualquer tipo de pedido que
+      realize
+      como pessoa através de qualquer uma das formas de contato que coloco à sua disposição.
+      Para obter informações sobre consultas, pedidos, atividades, produtos, novidades e/ou serviços; via e-mail,
+      fax,
+      WhatsApp, Skype, telefone fornecido, sms e mms.
+      Para enviar comunicações comerciais ou publicitárias através de qualquer outro meio eletrônico ou físico, que
+      possibilite a realização de comunicações.
+      Essas comunicações, serão sempre relacionadas com os nossos produtos, serviços, novidades e promoções, bem
+      como
+      aqueles produtos ou serviços que possamos considerar do seu interesse e que possam oferecer colaboradores,
+      empresas ou "parceiros" com os quais mantemos acordos de promoção ou de colaboração comercial.
+    </p>
+    <p>
+      Sendo assim, garantimos que estes terceiros nunca terão acesso aos seus dados pessoais, com as exceções
+      indicadas
+      abaixo, sendo em todo o caso essas comunicações realizadas por parte de George Santos, como titular da web.
+    </p>
+    <p>
+      Este site mostra produtos de afiliado de terceiros.
+      Isto quer dizer que, ao clicar em "Compre Agora" ou em determinados links similares, você será redirecionado
+      para
+      a página onde se ofertam produtos.
+    </p>
+    <p>
+      Neste caso, você deve saber que somente proporcionamos e facilitamos os links para as páginas e/ou plataformas
+      de
+      terceiros, onde podem ser adquiridos os produtos que mostramos, no intuito de facilitar a pesquisa e fácil
+      aquisição dos mesmos.
+    </p>
+    <p>
+      Estas páginas interligadas e pertencem a terceiros, não foram revisadas nem estão sobre controle, nem
+      recomendação
+      por minha parte, por isso que, em nenhum caso, George Santos será considerado responsável pelo conteúdo desses
+      sites, nem das responsabilidades derivadas da sua utilização em todos os aspectos, nem mesmo por medidas
+      tomadas
+      relacionadas à privacidade do usuário, tratamento de seus dados de caráter pessoal ou outras que possam ser
+      estabelecidas.
+    </p>
+    <p>
+      Por tudo isso, recomendo a leitura cuidadosa e antecipada de todas as condições de uso, condições de compra,
+      políticas de privacidade, termos de uso e/ou similares desses sites antes de proceder à aquisição de produtos
+      ou
+      utilização dos sites.
+    </p>
+    <p>
+      EXATIDÃO E VERACIDADE DOS DADOS
+      Como usuário, você é o único responsável pela veracidade e alteração dos dados que enviar a Alugo,
+      exonerando-me
+      de qualquer responsabilidade a respeito.
+    </p>
+
+    <p>
+      Quer dizer, a você cabe garantir e responder em qualquer caso, a exatidão, vigência e autenticidade dos dados
+      pessoais fornecidos, e se comprometer a manter esses dados devidamente atualizados.
+    </p>
+    <p>
+      De acordo ao expressado nesta Política de Privacidade, você concorda em fornecer informação completa e correta
+      no
+      formulário de contato ou assinatura.
+    </p>
+    <p>
+      CANCELAMENTO DE INSCRIÇÃO E O DIREITO DE REVOGAÇÃO
+      Como titular dos dados que nos tenha fornecido, pode exercer em qualquer momento os seus direitos de acesso,
+      retificação, cancelamento e oposição, enviando-nos um e-mail para contato@alugo.com.br anexando uma fotocópia
+      do
+      seu documento de identidade como prova válida.
+    </p>
+    <p>
+      Para solicitar seus dados também pode fazer diretamente através desse link: https://alugo.com.br/contato.
+    </p>
+    <p>
+      Igualmente, você poderá cancelar a qualquer momento para deixar de receber a nosso newsletter ou qualquer
+      outra
+      comunicação comercial, diretamente a partir do mesmo endereço de e-mail que você recebeu ou enviando-nos um
+      e-mail
+      para contato@alugo.com.br
+    </p>
+    <p>
+      ACESSO A DADOS POR PARTE DE TERCEIROS
+      Para poder prestar serviços estritamente necessários para o funcionamento e desenvolvimento das atividades
+      deste
+      site, informamos que compartilhamos dados com os seguintes prestadores de serviço, sob as suas correspondentes
+      condições de privacidade.
+    </p>
+    <p>
+      Você pode ter a tranquilidade total de que estes terceiros não poderão utilizar essas informações para
+      qualquer
+      outro fim que não esteja especificamente regulado em nossas relações com eles, nos termos da legislação
+      aplicável
+      em matéria de proteção de dados de caráter pessoal.
+    </p>
+    <p>
+      Este site está hospedado em https://www.digitalocean.com/ com a marca comercial Digital Ocean, que oferece
+      serviços de hospedagem para que você possa acessar e navegar pelo nosso site. Pode consultar a política de
+      privacidade e outros aspectos legais dessa empresa no seguinte link: https://www.digitalocean.com/legal/.
+    </p>
+    <p>
+      Nosso site utiliza servidores publicitários com o fim de facilitar os conteúdos comerciais que verá em nossas
+      páginas. Tais serviços publicitários utilizam cookies, que permitem adaptar os conteúdos publicitários para os
+      perfis demográficos dos utilizadores:
+    </p>
+    <p>
+      Redes Sociais
+      As cookies de redes sociais podem ser armazenadas no seu navegador enquanto você navega pelo blog, por
+      exemplo,
+      quando você usa o botão de compartilhar um artigo do Alugo em alguma rede social.
+    </p>
+    <p>
+      As implicações de privacidade serão em função de cada rede social e dependem da configuração de privacidade
+      que
+      tenha nessa rede. Em nenhum caso, nem eu George Santos como o responsável por este blog, nem os anunciantes,
+      podemos obter informações de identificação pessoal de cookies.
+    </p>
+    <p>
+      Para saber mais sobre as cookies de redes sociais visite nossa Política De Cookies.
+    </p>
+    <p>
+      Google Analytics:
+      O Google Analytics é um serviço de análise web fornecido pela Google, Inc., uma companhia de Delaware cujo
+      escritório principal está em 1600 Amphitheatre Parkway, Mountain View (California), CA 94043, Estados Unidos
+      ("Google").
+    </p>
+    <p>
+      Google Analytics utiliza "cookies", que são arquivos de texto localizados no seu computador, para ajudar o
+      website
+      a analisar o uso que os usuários fazem do site.
+    </p>
+    <p>
+      A informação gerada pelo cookie sobre a sua utilização do website (incluindo o seu endereço IP) será
+      diretamente
+      transmitida e arquivada por Google. Google usará esta informação por minha conta, com o propósito de seguir a
+      pista do seu uso do website, compilando relatórios sobre a atividade do website e fornecendo outros serviços
+      relativos a atividade do website e utilização da Internet.
+    </p>
+    <p>
+      Google pode igualmente transferir esta informação para terceiros, sempre que exigido por lei ou quando estes
+      terceiros processem a informação através do Google. O Google não associará o seu endereço IP com qualquer
+      outro
+      dado mantido.
+    </p>
+    <p>
+      Google Adsense:
+      O Google Adsense utiliza cookies para exibir anúncios personalizados neste site. Você pode desativar o uso do
+      cookie DART através do anúncio do Google ou acessando diretamente este link
+      https://adssettings.google.com/authenticated.
+    </p>
+    <p>
+      Usamos empresas de publicidade de terceiros para veicular anúncios quando visita o nosso website. É possível
+      que
+      estas empresas utilizem a informação que recebem de suas visitas a este e a outros websites (sem incluir o seu
+      nome, endereço, endereço de e-mail ou número de telefone) para lhe fornecer anúncios sobre produtos e serviços
+      que
+      lhe são de interesse.
+    </p>
+    <p>
+      Ao usar este site, você concorda com o processamento de dados pelo Google na forma e para os fins indicados.
+    </p>
+    <p>
+      Se quiser saber mais sobre o uso de cookies e sobre as práticas de recolha de informação e os processos de
+      aceitação ou rejeição, consulte a nossa Política De Cookies.
+    </p>
+    <p>
+      E-Mails Comerciais
+      Eu George Santos quero lhe confirmar que não realizo práticas de SPAM, quer dizer que não envio e-mails
+      comerciais
+      que não foram devidamente identificados, solicitados e permitidos pelo Usuário.
+    </p>
+    <p>
+      Em cada um dos formulários que existem no blog, o usuário tem a possibilidade de dar ou não seu consentimento
+      expresso para receber minha Newsletter.
+    </p>
+    <p>
+      MEDIDAS DE SEGURANÇA
+      Como titular do site, George Santos adotou todas as medidas técnicas e organizacionais necessárias para
+      garantir
+      a
+      segurança e integridade dos dados de carácter pessoal que trate, bem como para evitar a sua alteração, perda,
+      e/ou
+      acesso por parte de terceiros não autorizados.
+    </p>
+    <p>
+      Este blog inclui um certificado SSL, trata-se de um protocolo de segurança que faz com que seus dados viajem
+      de
+      forma íntegra e segura, ou seja, a transmissão de dados entre um servidor e um usuário da web é totalmente
+      criptografada ou encriptada.
+    </p>
+    <p>
+      De todas as formas, deve estar ciente de que as medidas de segurança dos sistemas informáticos na Internet não
+      são
+      inteiramente confiáveis, por isso no site https://www.alugo.com.br, também não posso garantir completamente a
+      inexistência de vírus ou outros elementos que possam produzir alterações nos sistemas informáticos (software e
+      hardware) do Utilizador ou em seus documentos eletrônicos e arquivos que contém.
+    </p>
+    <p>
+      Em caso de algum problema de fuga de dados me comprometo a avisar imediatamente as autoridades e a você
+      leitor.
+    </p>
+
+  </div>
 </div>
+
+
 
 {% endblock %}
