Inclusão da quantidade de produtos e correção no excluir produto

--- a/templates/products/my-products.html
+++ b/templates/products/my-products.html
@@ -28,7 +28,7 @@
                     <div class="d-md-flex col-12 align-items-center">
                         <div class="col-md col-11">
                             <a class="lead" data-toggle="collapse" href="#publicados" aria-expanded="true"
-                                aria-controls="publicados" style="color:#696969">Publicados (3)</a>
+                                aria-controls="publicados" style="color:#696969">Publicados ({{quantidade}})</a>
                         </div>
                     </div>
 
